<resources>
    <string name="app_name">Wind Escalator</string>
    <string name="bottom_navigation_alert">Alerts</string>
    <string name="bottom_navigation_messure">Wind</string>
    <string name="bottom_navigation_webcam">Webcams</string>
    <string name="alert_emtpy_fragment_icon_text">Alert Image</string>
    <string name="alert_empty_fragment_title">No alerts</string>
    <string name="alert_emtpy_fragment_info">New alerts are shown here.</string>
    <string name="search">Search</string>
    <string name="alert_fragment_title">Alerts</string>
    <string name="rollback">Undo</string>
    <string name="alert_removed">deleted.</string>
    <string name="wind_fragment_title">Wind</string>
    <string name="wind_emtpy_fragment_icon_text">No wind data</string>
    <string name="wind_empty_fragment_title">No wind data</string>
    <string name="wind_emtpy_fragment_info">Wind data is shown here.</string>
    <string name="webcam_emtpy_fragment_icon_text">wecam icon</string>
    <string name="webcam_empty_fragment_title">No webcams</string>
    <string name="webcam_emtpy_fragment_info">Webcams are shown here.</string>
    <string name="webcam_fragment_title">Webcams</string>
    <string name="alert_detail_activity_title">Configure alert</string>
    <string name="alert_detail_add_name_hint">Alertname</string>
    <string name="alert_detail_add_name_text">Alertname</string>
    <string name="alert_detail_select_alert_hint">Select alert…</string>
    <string name="wind_alert_action">WIND_ALERT_ACTION</string>
    <string name="alert_detail_activity_error_no_name">Set alert name!</string>
    <string name="alert_detail_activity_toast_saved_alert">Alert saved!</string>
    <string name="header_wind_resource">Select wind resource…</string>
    <string name="alert_detail_activity_toast_error_missing_directions">Really! Alerting for wind from no direction?! Are you on the moon?!</string>
    <string name="alert_detail_activity_toast_error_missing_threshold">Select a minimal wind force to trigger the alert!</string>
    <string name="alert_detail_activity_error_missing_endtime">Set end time to watch for wind!</string>
    <string name="alert_detail_activity_error_same_start_and_endtime">Set different times for start and end!</string>
    <string name="alert_detail_activity_error_endtime_before_starttime">Make sure you set the starttime before the endtime"</string>
    <string name="alert_detail_activity_error_missing_starttime">Set time to start watching for wind!</string>
    <string name="alert_detail_activity_toast_error_missing_resource">Select a wind resource to alert!</string>
    <string name="alert_notification_title">WindEscalator Alert!</string>
    <string name="alarm_notification_text">Wind alert for: </string>
    <string name="iv_alert_notification_description">Run!</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="kts">Kts:</string>
    <string name="kts_threshold">Kts Threshold</string>
    <string name="save">Save</string>
    <string name="broadcast_permission">WindEscalator.Broadcast.Permission</string>
    <string name="thun">https://www.thunerwetter.ch/current_sb.xml</string>
    <string name="scni">https://pmcjoder.ch/webcam/neuhaus/wetterstation/daily.txt</string>
    <string name="neuc">http://webcam.ichtus.ch:8888/WebApiCoreIchtus/LetsKiteValue</string>
    <string name="run">Run!</string>
    <string name="show_wind_data">Show Wind Data</string>
    <string name="stop_alert">Stop Alert</string>
    <string name="winddata">Force: %1$s \nDirection: %2$s \nTime: %3$s</string>
    <string name="winddata_alertnotification">Location: %1$s\nForce: %2$s\nDirection: %3$s\nTime: %4$s</string>
    <string name="log_empty_fragment_title">No log data</string>
    <string name="logs_emtpy_fragment_icon_text">dev icon</string>
    <string name="log_emtpy_fragment_info">Logs are shown here</string>
    <string name="log_fragment_title">Log</string>
    <string name="bottom_navigation_logs">Debug</string>
    <string name="delimiter">-</string>
    <string name="one_knot">1kts</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="progress_kts">%1$s kts</string>
    <string name="signInError">To use the app you need to sign in with your google account</string>
    <string name="default_notification_channel_id">WindEscalatorApp</string>
    <string name="channel_description">Notification channel to inform about windalerts</string>
    <string name="permission_post_notification_required">Notifaction access is required for sending you alerts about winddata.</string>
    <string name="wind_resource_icon">Wind resource icon</string>
    <string name="wind_status_indicator">Data status indicator</string>
    <string name="wind_force_label">Force</string>
    <string name="wind_gust_label">Gust</string>
    <string name="wind_direction_label">Direction</string>
    <string name="wind_time_label">Time</string>
    <string name="wind_last_checked">Last checked: %1$s</string>
    <string name="wind_data_offline">Currently offline</string>
    <string name="webcam_open_in_browser">Open in browser</string>
    <string name="webcam_image_description">Webcam image</string>
    <string name="webcam_no_url">No webcam URL configured</string>

</resources>
