<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AlertDetailActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.stephgit.windescalator.alert.detail.AlertDetailActivity">

    <EditText
        android:id="@+id/et_add_alert_name"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:fontFamily="sans-serif"
        android:hint="@string/alert_detail_add_name_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/sp_select_alert_resource"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <Spinner
        android:id="@+id/sp_select_alert_resource"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/red_outline"
        android:popupBackground="@drawable/red_outline_white_background"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/et_alert_start_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_alert_name"
        tools:listitem="@layout/item_wind_resource" />

    <EditText
        android:id="@+id/et_alert_start_time"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/windescalator_alert_detail_margin_top"
        android:layout_marginBottom="30dp"
        android:ems="5"
        android:focusable="false"
        android:hint="@string/start_time"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/sb_alert_threshold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_time_delimiter"
        app:layout_constraintTop_toBottomOf="@id/sp_select_alert_resource" />

    <TextView
        android:id="@+id/tv_time_delimiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/windescalator_alert_detail_margin_top"
        android:layout_marginBottom="30dp"
        android:text="-"
        app:layout_constraintBottom_toTopOf="@id/sb_alert_threshold"
        app:layout_constraintLeft_toRightOf="@id/et_alert_start_time"
        app:layout_constraintRight_toLeftOf="@id/et_alert_end_time"
        app:layout_constraintTop_toBottomOf="@id/sp_select_alert_resource" />

    <EditText
        android:id="@+id/et_alert_end_time"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/windescalator_alert_detail_margin_top"
        android:layout_marginBottom="30dp"
        android:ems="5"
        android:focusable="false"
        android:hint="@string/end_time"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/sb_alert_threshold"
        app:layout_constraintLeft_toRightOf="@id/tv_time_delimiter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_select_alert_resource" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sb_label"
        android:layout_marginTop="30dp"
        android:text="1kts"
        app:layout_constraintTop_toBottomOf="@id/tv_time_delimiter"
        app:layout_constraintBottom_toTopOf="@+id/sb_alert_threshold"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/sb_label_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginStart="10dp"
        android:text="@string/kts"
        app:layout_constraintBottom_toTopOf="@id/btn_alert_wind_direction"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/sb_alert_threshold"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_delimiter"
        app:layout_constraintVertical_bias="0.570" />

    <SeekBar
        android:id="@+id/sb_alert_threshold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/kts_threshold"
        android:max="45"
        android:outlineProvider="paddedBounds"
        android:progress="1"
        app:layout_constraintBottom_toTopOf="@id/btn_alert_wind_direction"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_time_delimiter" />

    <ch.stephgit.windescalator.alert.detail.direction.DirectionChart
        android:id="@+id/btn_alert_wind_direction"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/windescalator_alert_detail_margin_top"
        android:gravity="center_vertical|center_horizontal"
        app:layout_constraintBottom_toTopOf="@id/btn_alert_save"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sb_alert_threshold" />

    <Button
        android:id="@+id/btn_alert_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_alert_wind_direction" />

</androidx.constraintlayout.widget.ConstraintLayout>
