<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".alert.AlertFragment"
        android:id="@+id/AlertFragment"
        android:background="@color/oberEscalator_colorBackground">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lv_alerts"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:id="@+id/alert_no_alerts_exists"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.3">
    <ImageView
                android:id="@+id/iv_noAlert"
                android:src="@drawable/ic_baseline_alarm_24"
                android:layout_width="@dimen/oberEscalator_empty_fragment_icon_width"
                android:layout_height="@dimen/oberEscalator_empty_fragment_icon_height"
                android:layout_marginTop="@dimen/oberEscalator_empty_fragment_icon_marginTop"
                android:layout_marginBottom="@dimen/oberEscalator_empty_fragment_icon_marginBottom"
                app:backgroundTint="@color/oberEscalator_colorBackgroundText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_noAlert"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintVertical_bias="0.3"
                android:contentDescription="@string/alert_emtpy_fragment_icon_text"/>
        <TextView
                android:id="@+id/tv_noAlert"
                android:text="@string/alert_empty_fragment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/oberEscalator_empty_fragment_title_textSize"
                android:layout_marginBottom="@dimen/oberEscalator_empty_fragment_title_marginBottom"
                app:layout_constraintTop_toBottomOf="@+id/iv_noAlert"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_noAlertHint"
                app:layout_constraintVertical_bias="0.3"
                android:textColor="@color/oberEscalator_colorBackgroundText"/>
        <TextView
                android:id="@+id/tv_noAlertHint"
                android:text="@string/alert_emtpy_fragment_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_noAlert"
                app:layout_constraintVertical_bias="0.3"
                android:textColor="@color/oberEscalator_colorBackgroundText"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_addGeofence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/oberEscalator_floating_action_button_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/oberEscalator_colorBrand"
            />
</androidx.constraintlayout.widget.ConstraintLayout>